<resources>
    <string name="app_name">Список криптовалют</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="errMessage">Случилась какая-то ошибка :(\nПопробуем снова?</string>
    <string name="tryRefreshGet">Попробовать</string>
    <string name="description">Описание</string>
    <string name="categories">Категории</string>
    <string name="chip_usd">USD</string>
    <string name="chip_eur">EUR</string>
    <string name="percent">%</string>
    <string name="usd_currency">$</string>
    <string name="eur_currency">€</string>
</resources>