<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.Coins">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="117dp">



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/app_name"
                        android:textColor="@color/title_color"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="13dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:selectionRequired="true"
                        app:singleSelection="true"
                        app:checkedChip="@+id/usd">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/usd"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="89dp"
                            android:layout_height="wrap_content"
                            android:text="@string/chip_usd"
                            android:textAlignment="center"
                            android:textColor="@color/chip_text_color_tab"
                            android:textSize="14sp"
                            app:chipBackgroundColor="@color/chip_color_tab" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/eur"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="89dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/chip_eur"
                            android:textAlignment="center"
                            android:textColor="@color/chip_text_color_tab"
                            android:textSize="14sp"
                            app:chipBackgroundColor="@color/chip_color_tab" />


                    </com.google.android.material.chip.ChipGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/pullToRefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/coinsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:indicatorColor="@color/white"
        app:trackColor="@android:color/holo_orange_dark"
        android:layout_marginTop="20dp"
        android:indeterminate="true"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageErr"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/err_image"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageErr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/errMessage"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="13dp"
        android:gravity="center" />

    <Button
        android:id="@+id/btnErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textErr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/tryRefreshGet"
        android:textColor="@color/white"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:elevation="0dp"
        android:layout_marginTop="32dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>